AWSClientRuntime/Tests/Protocols/RestXML/Models/Errors/GreetingWithErrorsNoErrorWrappingOutputError.swift
//
// Copyright Amazon.com Inc. or its affiliates.
// All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//

// Code generated by smithy-swift-codegen. DO NOT EDIT!

import AWSClientRuntime

public enum GreetingWithErrorsNoErrorWrappingOutputError: Equatable {
    case complexXMLErrorNoErrorWrapping(ComplexXMLErrorNoErrorWrapping)
    case unknown(UnknownAWSHttpServiceError)
}
